[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/ingame-menu/InGameMenu.gd" type="Script" id=1]
[ext_resource path="res://fonts/WendyOne-Regular-Title.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/WendyOne-Regular.tres" type="DynamicFont" id=3]
[ext_resource path="res://ui/options/Options.tscn" type="PackedScene" id=4]

[node name="InGameMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -131.0
margin_top = -92.0
margin_right = 131.0
margin_bottom = 92.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 262.0
margin_bottom = 206.0
custom_constants/separation = 15

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 262.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 2 )
text = "Options"
align = 1

[node name="ResumeButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 41.0
margin_right = 262.0
margin_bottom = 71.0
rect_min_size = Vector2( 0, 30 )
custom_fonts/font = ExtResource( 3 )
text = "Resume"

[node name="OptionsButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 86.0
margin_right = 262.0
margin_bottom = 116.0
rect_min_size = Vector2( 0, 30 )
custom_fonts/font = ExtResource( 3 )
text = "Options"

[node name="ReturnMenuButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 131.0
margin_right = 262.0
margin_bottom = 161.0
rect_min_size = Vector2( 0, 30 )
custom_fonts/font = ExtResource( 3 )
text = "Return Main Menu"

[node name="ExitGameButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 176.0
margin_right = 262.0
margin_bottom = 206.0
rect_min_size = Vector2( 0, 30 )
custom_fonts/font = ExtResource( 3 )
text = "Exit Game"

[node name="Options" parent="." instance=ExtResource( 4 )]
visible = false
[connection signal="pressed" from="MarginContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ReturnMenuButton" to="." method="_on_ReturnMenuButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ExitGameButton" to="." method="_on_ExitGameButton_pressed"]
[connection signal="on_close" from="Options" to="." method="_on_Options_on_close"]
